# wolfRemote

./: .gitignore  Makefile  Pipfile  README.md  api.py  app.py  fire_and_forget.py  lights.json  main.py  pyproject.toml  remote.code-workspace  remote.ini  requirements.txt  vizio_tv.py
api/: __init__.py  lights.py  receiver.py  sequences.py  tv.py
config/: lights.json  tv.json
devices/: ir_remote.py  lights.py  vizio_tv.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  alerts.tsx  index.css  lights.tsx  requests.ts  scenes.tsx  sequences.ts  tv.tsx  types.ts
frontend/src/img/wolfcorner.pxd/QuickLook/: Icon.tiff
frontend/src/img/wolficon.pxd/: metadata.info
frontend/src/img/wolficon.pxd/QuickLook/: Thumbnail.tiff
remotes/: ir_remote.py  sony_strdh590.json
server/: main.py
server/api/: __init__.py  lights.py  receiver.py  sequences.py  tv.py
server/config/: sony_strdh590.json  tv.json
server/devices/: vizio_tv.py
server/static/: dothings.js  openapi.yaml  styles.css
server/templates/: index.html
static/: dothings.js  openapi.yaml  styles.css
static/wolfcorner.pxd/: metadata.info
static/wolfcorner.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
static/wolfcorner.pxd/data/: 8F570B5E-48FF-4057-9568-FB4EA8FF7B70
static/wolficon.pxd/QuickLook/: Icon.tiff
static/wolficon.pxd/data/: 02926B79-67AD-4B60-ABB2-0279DFAD4792  7A753675-C62F-4E14-9154-8DAA246001D0  82918E5B-FA3D-45CB-99E8-51C7BB4048E3
static/wolficon.pxd/data/selectionForContentTransform/: meta
templates/: index.html  new.html
(+2 files in other folders)
