[tool.poetry]
name = "wolfRemote"
version = "0.1.0"
description = ""
authors = ["Sam Wolfson <terabyte128@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wakeonlan = "^2.0.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
Flask = "^2.0.1"
flask-swagger-ui = "^3.36.0"
lifxlan = "^1.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
